--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>Payment Balance Calculator</title>
+  <title>Medical Billing Calculator</title>
   <script src="https://cdn.tailwindcss.com"></script>
   <script src="https://unpkg.com/lucide@latest/dist/umd/lucide.js"></script>
   <style>
@@ -22,7 +22,7 @@
   <div class="w-full max-w-lg bg-white shadow-xl rounded-xl p-6">
 
     <h1 class="text-2xl font-bold text-center mb-6 text-gray-800">
-      Payment Balance Calculator
+      Medical Billing Calculator
     </h1>
 
     <div class="space-y-5">
@@ -112,7 +112,7 @@
         superiorExam: "Per Superior Vision, patient is responsible for remaining exam copay received on date of service XXXX"
       },
 
-      // Fixed quick buttons at the bottom
+      // Quick buttons at the bottom
       fixedButtons: {
         notInEob:       "Not in EOB",
         keepingPayment: "Keeping payment for claim",
