--- a/index.html
+++ b/index.html
@@ -119,7 +119,7 @@
         paymentPosted:  "Payment posted in claim",
         returned:       "Returned, no new order in POS, retraction required",
         remake:         "Payment sent for remake, retraction required",
-        co11:           "Paid tiwce",
+        co11:           "Paid twice",
         reversal:       "Reversal payment"
       },
 
